fix selected default creatures

--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -4550,7 +4550,7 @@
 
 	<div class="sheet-title" style="margin-bottom:0px;" data-i18n="bestiary">Bestiary</div>
 
-	<div class="sheet-wrapper">   
+	<div class="sheet-wrapper">
 		<div>
 	    	<div class="sheet-accordion"> <!-- Fighter -->
 	      		<input id="tab-fighter" type="radio" name="tabs">
@@ -4622,8 +4622,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="guard" selected>Garde</option>
-										<option value="militiaman" selected>Milicien</option>
+										<option value="guard">Garde</option>
+										<option value="militiaman">Milicien</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -4680,10 +4680,10 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="knight" selected>Chevalier</option>
-										<option value="scout" selected>Éclaireur</option>
-										<option value="wild" selected>Sauvage</option>
-										<option value="regular_soldier" selected>Soldat Régulier</option>
+										<option value="knight">Chevalier</option>
+										<option value="scout">Éclaireur</option>
+										<option value="wild">Sauvage</option>
+										<option value="regular_soldier">Soldat Régulier</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -4740,9 +4740,9 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="captain" selected>Capitaine</option>
-										<option value="samouri" selected>Samourai</option>
-										<option value="veteran_soldier" selected>Soldat Vétéran</option>
+										<option value="captain">Capitaine</option>
+										<option value="samouri">Samourai</option>
+										<option value="veteran_soldier">Soldat Vétéran</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -4799,8 +4799,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="elite_knight" selected>Chevalier d'élite</option>
-										<option value="elite_soldier" selected>Soldat d'élite</option>
+										<option value="elite_knight">Chevalier d'élite</option>
+										<option value="elite_soldier">Soldat d'élite</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -4856,8 +4856,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="officier" selected>Commandant</option>
-										<option value="praetorian" selected>Prétorien</option>
+										<option value="officier">Commandant</option>
+										<option value="praetorian">Prétorien</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -5651,7 +5651,7 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="wizard" selected>Mage Expert</option>
+										<option value="wizard">Mage Expert</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -7347,8 +7347,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="bandit" selected>Bandit</option>
-										<option value="thief" selected>Coupe Bourse</option>
+										<option value="bandit">Bandit</option>
+										<option value="thief">Coupe Bourse</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -7405,7 +7405,7 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="band_master" selected>Chef de bande</option>
+										<option value="band_master">Chef de bande</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -7462,8 +7462,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="bruglar" selected>Gentleman Cambrioleur</option>
-										<option value="ninja" selected>Ninja</option>
+										<option value="bruglar">Gentleman Cambrioleur</option>
+										<option value="ninja">Ninja</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -7520,8 +7520,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="assassin" selected>Assassin</option>
-										<option value="spy" selected>Espion</option>
+										<option value="assassin">Assassin</option>
+										<option value="spy">Espion</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -7577,8 +7577,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="thief_master" selected>Maître voleur</option>
-										<option value="shinobi" selected>Shinobi</option>
+										<option value="thief_master">Maître voleur</option>
+										<option value="shinobi">Shinobi</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -7635,7 +7635,7 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="executor" selected>Maître exécuteur</option>
+										<option value="executor">Maître exécuteur</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -7748,8 +7748,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="thief_lord" selected>Prince des voleurs</option>
-										<option value="legendary_shinobi" selected>Shinobi Légendaire</option>
+										<option value="thief_lord">Prince des voleurs</option>
+										<option value="legendary_shinobi">Shinobi Légendaire</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -9167,8 +9167,8 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="juggler" selected>Jongleur</option>
-										<option value="Monk" selected>Moine</option>
+										<option value="juggler">Jongleur</option>
+										<option value="Monk">Moine</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -9281,10 +9281,10 @@
 	                            <div class="sheet-accordion-content">
 									<select name="attr_bestiary_creature">
 										<option value="" selected></option>
-										<option value="famous_bard" selected>Barde Célèbre</option>
-										<option value="scholar" selected>Érudit</option>
-										<option value="blacksmith_master" selected>Maître Armurier</option>
-										<option value="illustrious_noble" selected>Noble illustre</option>
+										<option value="famous_bard">Barde Célèbre</option>
+										<option value="scholar">Érudit</option>
+										<option value="blacksmith_master">Maître Armurier</option>
+										<option value="illustrious_noble">Noble illustre</option>
 	                                </select>
 	                            </div>
 	                        </div>
