fix default inhuman action selected

--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -1748,7 +1748,7 @@
           	<input type="hidden" name="attr_aap" disabled="true" value="(((@{aam})-abs(@{aam}))/2)" /><!-- All Action Penalty -->
 			<div class="sheet-title" style="margin-bottom:0px;" data-i18n="inhuman-action">Inhuman Actions</div>
 			<div class="sheet-style_row">
-        		<label><input type="radio" name="attr_inhuman_action" value="" /><span data-i18n="no">No</span></label>
+        		<label><input type="radio" name="attr_inhuman_action" value="" checked/><span data-i18n="no">No</span></label>
        		</div>
        		<div class="sheet-style_row">
         		<label><input type="radio" name="attr_inhuman_action" value="inhuman" /><span data-i18n="inhumanity">Inhumanity</span></label>
