--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -4370,8 +4370,8 @@
       <div class="sheet-cell sheet-sidebubbled" data-i18n="whisper-rolls">Whipser Rolls?</div>
       <select name="attr_wtype">
         <option value="" selected="true" data-i18n="never">Never</option>
-        <option value="gm " data-i18n="always">Always</option>
-        <option value="?{Whisper|Public Roll,|Whisper Roll,gm } " data-i18n="querry">Querry</option>
+        <option value="/w gm " data-i18n="always">Always</option>
+        <option value="?{Whisper|Public Roll,|Whisper Roll,/w gm } " data-i18n="querry">Querry</option>
       </select>
     </div>
     <div class="sheet-style_row">
