fix option select bestiary

--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -4933,8 +4933,8 @@
 										<option value="" selected></option>
 										<option value="effrit" data-i18n="effrit">effrit</option>
 										<option value="titan" data-i18n="titan">titan</option>
-										<option value="undine" data-i18n=""undine"">"undine"</option>
-										<option value="sylph" data-i18n=""sylph"">"sylph"</option>
+										<option value="undine" data-i18n="undine">undine</option>
+										<option value="sylph" data-i18n="sylph">sylph</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -4957,8 +4957,8 @@
 										<option value="" selected></option>
 										<option value="effrit" data-i18n="effrit">effrit</option>
 										<option value="titan" data-i18n="titan">titan</option>
-										<option value="undine" data-i18n="undine">"undine"</option>
-										<option value="sylph" data-i18n="sylph">"sylph"</option>
+										<option value="undine" data-i18n="undine">undine</option>
+										<option value="sylph" data-i18n="sylph">sylph</option>
 	                                </select>
 	                            </div>
 	                        </div>
@@ -5850,8 +5850,8 @@
 										<option value="" selected></option>
 										<option value="effrit" data-i18n="effrit">effrit</option>
 										<option value="titan" data-i18n="titan">titan</option>
-										<option value="undine" data-i18n="undine">"undine"</option>
-										<option value="sylph" data-i18n="sylph">"sylph"</option>										
+										<option value="undine" data-i18n="undine">undine</option>
+										<option value="sylph" data-i18n="sylph">sylph</option>									
 	                                </select>
 	                            </div>
 	                        </div>
@@ -5874,8 +5874,8 @@
 										<option value="" selected></option>
 										<option value="effrit" data-i18n="effrit">effrit</option>
 										<option value="titan" data-i18n="titan">titan</option>
-										<option value="undine" data-i18n="undine">"undine"</option>
-										<option value="sylph" data-i18n="sylph">"sylph"</option>										
+										<option value="undine" data-i18n="undine">undine</option>
+										<option value="sylph" data-i18n="sylph">sylph</option>									
 	                                </select>
 	                            </div>
 	                        </div>
