Fix translation of spell's INT requirement

--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -2448,7 +2448,7 @@
                     <div class="sheet-expanded">
                       <div class="sheet-dark_row">
                         <div class="sheet-cell sheet-longbubble" data-i18n="rank" style="width:90px;">Rank</div>
-                        <div class="sheet-cell" data-i18n="requirement" style="width:80px;">Req.</div>
+                        <div class="sheet-cell" data-i18n="int-requirement" style="width:80px;">Req.</div>
                         <div class="sheet-cell" data-i18n="zeon" style="width:80px;">Zeon</div>
                         <div class="sheet-cell" data-i18n="maintanance" style="width:80px;">Maint.</div>
                       </div>
@@ -3943,7 +3943,7 @@
         <div class="sheet-cell" data-i18n="quality">Quality</div>
         <div class="sheet-cell" style="width:100px;" data-i18n="presence">Presence</div>
         <div class="sheet-cell" style="width:100px;" data-i18n="fortitude">Fortitude</div>
-        <div class="sheet-cell" style="width:100px;" data-i18n="requirement">Requirement</div>
+        <div class="sheet-cell" style="width:100px;" data-i18n="armor-requirement">Requirement</div>
         <div class="sheet-cell" style="width:100px;" data-i18n="armormalus">Armor Malus</div>
     </div>
     <div class="sheet-style_row">
@@ -10060,7 +10060,7 @@
       </th>
     </tr>
     <tr style="text-align:center;">
-      <td data-i18n="requirement-short">Req.</td>
+      <td data-i18n="int-requirement-short">Req.</td>
       <td data-i18n="zeon">Zeon</td>
       <td data-i18n="maintanance-short">Ma.</td>
     </tr>
@@ -10080,7 +10080,7 @@
       </th>
     </tr>
     <tr style="text-align:center;">
-      <td data-i18n="requirement-short">Req.</td>
+      <td data-i18n="int-requirement-short">Req.</td>
       <td data-i18n="zeon">Zeon</td>
       <td data-i18n="maintanance-short">Ma.</td>
     </tr>
@@ -10100,7 +10100,7 @@
       </th>
     </tr>
     <tr style="text-align:center;">
-      <td data-i18n="requirement-short">Req.</td>
+      <td data-i18n="int-requirement-short">Req.</td>
       <td data-i18n="zeon">Zeon</td>
       <td data-i18n="maintanance-short">Ma.</td>
     </tr>
@@ -10120,7 +10120,7 @@
       </th>
     </tr>
     <tr style="text-align:center;">
-      <td data-i18n="requirement-short">Req.</td>
+      <td data-i18n="int-requirement-short">Req.</td>
       <td data-i18n="zeon">Zeon</td>
       <td data-i18n="maintanance-short">Ma.</td>
     </tr>
