Fix default value of attr_ki_useOfNecessaryEnergy ?

--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -3198,6 +3198,7 @@
                 <div class="sheet-cell sheet-ki_indent1 sheet-ki_title" data-i18n="use-of-necessary-energy">Use of Necessary Energy</div>
                 <div class="sheet-cell sheet-ki_cost">(10)</div>
             </div>
+            <input type="hidden" name="attr_ki_useOfNecessaryEnergy" value=""/>
             <input type="checkbox" class="sheet-ki_learned sheet-req_useofki sheet-useofnecenergy" name="attr_ki_useOfNecessaryEnergy" value="3|4|5"/>
             
             <div class="sheet-ki_row sheet-req_useofnecenergy">
