Fix weapon_finaldmg bug

--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -4198,7 +4198,7 @@
             </select>
             <div class="sheet-cell" style="font-size:12pt;font-weight:bold;">=</div>
             <input type="number" disabled="true" name="attr_weapon_finaldmg"
-            value="@{weapon_basedmg}+@{weapon_strbonus}+@{weapon_twohanded}*@{weapon_strbonus}+2*@{weapon_quality}+@{aura_extension}+@{increased_damage}"/>
+            value="@{weapon_basedmg}+@{weapon_strbonus}+@{weapon_twohanded}*(@{weapon_strbonus})+2*@{weapon_quality}+@{aura_extension}+@{increased_damage}"/>
         </div>
         <div class="sheet-dark_row">
             <div class="sheet-cell" style="width:90px;" data-i18n="fortitude">Fortitude</div>
