fix weapon_finaldmg bug

--- a/Anima-Beyond-Fantasy-Script/A-BF.html
+++ b/Anima-Beyond-Fantasy-Script/A-BF.html
@@ -4429,7 +4429,7 @@
 							</div>
 							<div class="sheet-style_row">
 								<div class="sheet-cell" data-i18n="hit">Hit</div>
-								<input type="number" disabled="true" name="attr_weapon_finaldmg" value="@{weapon_basedmg}+@{weapon_strbonus}+@{weapon_twohanded}*@{weapon_strbonus}+2*@{weapon_quality}+@{aura_extension}+@{increased_damage}"/>
+								<input type="number" disabled="true" name="attr_weapon_finaldmg" value="@{weapon_basedmg}+@{weapon_strbonus}+@{weapon_twohanded}*(@{weapon_strbonus})+2*@{weapon_quality}+@{aura_extension}+@{increased_damage}"/>
 							</div>
 							<div class="sheet-style_row">
 								<div class="sheet-cell" data-i18n="block">Block</div>
